syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Src.Protos";

package discount;

service GetDiscountProtocolBufferService {
	rpc GetDiscount(GetDiscountRequest) returns (GetDiscountProtocolBufferEntity);
}

message GetDiscountProtocolBufferEntity {
	int32 id = 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}

message GetDiscountRequest {
	string productName = 1;
}
