syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Src.Protos";

package discount;

service DeleteDiscountProtocolBufferService {
	rpc DeleteDiscount(DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message DeleteDiscountRequest {
	string productName = 1;
}

message DeleteDiscountResponse {
	bool success = 1;
}
